chore: Fix sort in screenshots, nowrap date

--- a/src/components/common/table-responsive.module.scss
+++ b/src/components/common/table-responsive.module.scss
@@ -22,6 +22,10 @@ $table-breakpoint: $viewport-lg;
   }
 }
 
+.no-wrap {
+  white-space: nowrap;
+}
+
 .label {
   font-weight: bold;
   display: inline-block;
